# fuck-sibo

./: .gitignore  Cargo.toml  LICENSE  README.md  __init__.py  api.py  errors.py  pyproject.toml  requirements.txt  tarpaulin.toml
.github/actions-rs/: grcov.yml
.github/workflow/: CI-build.yaml  CI-check.yaml  TestCoverageCheck.yaml
.github/workflows/: CI-check.yaml  TestCoverageCheck.yaml
sibo/: __init__.py  api.py  errors.py
src/: cli.rs  error.rs  lib.rs  prelude.rs  utils.rs
src/model/: macros.rs  mod.rs  requests.rs  response.rs
src/tests/: mod.rs  models.rs  requests.rs
